Various fixes to the release icons feature
It's been a while since I had static/f/ in git, so I had to adjust
.gitignore a bit.

The CSS changes are purely opinion, but it does integrate better with
the existing layout.

Everything else are bug fixes.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /data/icons/icons.css
 /static/f/js/
 /static/f/icons.png
+/static/f/vndb.js
+/static/f/vndb.js.gz
 /static/feeds/
 /static/s/*/style.css
 /static/s/*/style.css.gz
