Add password dictionary check
This affects the following:

- API login with a weak password is disallowed, affected users will have
  to change their password through the website to continue using the API.
- Registration, password reset or password change forms require the new
  password to not be in the dictionary.
- Attempting to log in to the website with a weak password will
  force-redirect to a password change form, allowing a new password to
  be set (using the weak-but-still-valid password as check).

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 /data/config.pl
-/data/multi.pid
 /data/docs/8
-/data/log/
 /data/icons/icons.css
+/data/log/
+/data/multi.pid
+/data/passwords.dat
 /static/f/js/
 /static/f/icons.png
 /static/f/vndb.js
