--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@
 /static/f/vndb.js.gz
 /static/feeds/
 /static/s/*/style.css
-/static/s/*/style.css.gz
+/static/s/*/style.min.css
+/static/s/*/style.min.css.gz
 /static/s/*/boxbg.png
 /static/v3/elm.js
 /static/v3/elm-opt.js
