JS/Build: Move minification and compression to "make prod"
Similar to previous commit.

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 /static/f/js/
 /static/f/icons.png
 /static/f/vndb.js
-/static/f/vndb.js.gz
+/static/f/vndb.min.js
+/static/f/vndb.min.js.gz
 /static/feeds/
 /static/s/*/style.css
 /static/s/*/style.min.css
