spritegen.pl: Move compression to "make prod"
I think this is the last one. 'make' in a development environment is now
beautifully fast and 'make prod' generates nicely small assets.
(arguably we could have an even faster dev setup by not generating an
icons.png in the first place, but then we'd need more code to
differentiate between dev & prod, which is also a pain)

This change does remove the "slow" option that would use the compressed
image size in the optimization algorithm, but I hadn't used that option
for a while anyway, it takes an hour and only saves about 100 bytes.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /elm3/Lib/Gen.elm
 /static/f/js/
 /static/f/icons.png
+/static/f/icons.opt.png
 /static/f/vndb.js
 /static/f/vndb.min.js
 /static/f/vndb.min.js.gz
