SQL reorg: Move util/sql/ to sql/ as a top-level dir
Been wanting to do this for a while...
I've kept util/sql as a symlink for compatibility with the devdump, old
update scripts and other code I may have forgotten. I'll remove it
later.

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@
 /data/passwords.dat
 /elm/elm-stuff/
 /elm/Gen/
-/elm3/elm-stuff/
-/elm3/Lib/Gen.elm
 /static/f/js/
 /static/f/icons.png
 /static/f/icons.opt.png
@@ -22,19 +20,12 @@
 /static/s/*/style.min.css
 /static/s/*/style.min.css.gz
 /static/s/*/boxbg.png
-/static/v3/elm.js
-/static/v3/elm-opt.js
-/static/v3/min.js
-/static/v3/min.js.gz
-/static/v3/min.css
-/static/v3/min.css.gz
-/static/v3/style.css
 /static/ch
 /static/cv
 /static/sf
 /static/st
 /static/robots.txt
 /static/api
-/util/sql/editfunc.sql
+/sql/editfunc.sql
 /www/
 *.swp
