--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,12 @@
 /static/f/vndb.js
 /static/f/vndb.min.js
 /static/f/vndb.min.js.gz
-/static/f/v2rw.js
-/static/f/v2rw.min.js
-/static/f/v2rw.min.js.gz
+/static/f/elm.js
+/static/f/elm.min.js
+/static/f/elm.min.js.gz
+/static/f/plain.js
+/static/f/plain.min.js
+/static/f/plain.min.js.gz
 /static/feeds/
 /static/s/*/style.css
 /static/s/*/style.min.css
